add template files and style header

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -5,3 +5,10 @@
 .main-header {
     width: 90%;
 }
+
+$light-blue: #cfe6f0;
+$off-white: #f5f8f9;
+$sans-serif-font: raleway, sans-serif;
+$serif-font: 'roboto slab', serif;
+$font-family: $sans-serif-font;
+$border: 1px solid #eee;
