--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -1,32 +1,17 @@
-.main-content {
-    padding-top: 40px;
-    padding-bottom: 40px;
+body {
+    background-color: $light-blue;
+}
 
-    @include elr-breakpoint('mars') {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-
-    @include elr-breakpoint('saturn') {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+.wrapper {
+    max-width: 1300px;
+    width: 95%;
+    margin: 20px auto;
+    background-color: $off-white;
+    box-shadow: 1px 1px 5px rgba($black, .1),
+        -1px -1px 5px rgba($black, .1);
 }
 
 img {
     max-width: 100%;
     height: auto;
-}
-
-.content-holder {
-    padding-right: 30px;
-
-    @include elr-breakpoint('saturn') {
-        padding-right: 0;
-    }
-
-    .full-width {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
 }
