style project box

--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -26,7 +26,7 @@
                 </div>
                 {% endif %}
                 {% if projects %}
-                <div class="projects elr-row shadow-box">
+                <div class="posts projects elr-row shadow-box">
                     <h2 id="projects" class="box-heading">Projects</h2>
                     {% for project in projects %}
                         {% include 'tease-project.twig' with {'post': project} %}
