--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -18,7 +18,7 @@
             </div>
             <div class="elr-col-three-fourths content-holder" style="padding-left: 20px; padding-right: 0">
                 {% if articles %}
-                <div class="posts elr-row shadow-box">
+                <div class="posts shadow-box">
                     <h2 id="posts" class="box-heading">Posts</h2>
                     {% for article in articles %}
                         {% include 'tease-post.twig' with {'post': article} %}
@@ -26,41 +26,47 @@
                 </div>
                 {% endif %}
                 {% if projects %}
-                <div class="posts projects elr-row shadow-box">
+                <div class="posts projects shadow-box">
                     <h2 id="projects" class="box-heading">Projects</h2>
                     {% for project in projects %}
                         {% include 'tease-project.twig' with {'post': project} %}
                     {% endfor %}
                 </div>
                 {% endif %}
-                <div class="elr-row">
-                    <div class="elr-col-full background shadow-box">
-                        <h2 id="background" class="box-heading">Background</h2>
-                        <h3>Summary</h3>
+                <div class="background shadow-box">
+                    <h2 id="background" class="box-heading">Background</h2>
+                    <div class="background-section">
+                        <h3 class="background-section-title">Summary</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat ex atque similique labore quisquam deleniti, omnis modi, dolorem quo, explicabo quibusdam. Natus at nisi animi beatae eveniet accusamus, tempora laudantium numquam repellendus maiores quia velit id saepe iure perspiciatis impedit, perferendis. Tempore nisi quia, quasi nobis doloribus quidem at.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident veritatis ea natus. Dignissimos sequi error molestias quasi facere neque voluptatibus officia quibusdam delectus, pariatur quos, similique aliquam consequatur officiis doloribus quo culpa et cupiditate numquam quisquam. Aut doloribus sapiente vel! Odio inventore provident sunt, at, aliquid perspiciatis hic minima optio.</p>
-                        {% if experiences %}
-                            <h3 id="experience">Experience</h3>
-                            {% for experience in experiences %}
-                                {% include 'tease-experience.twig' with {'post': experience} %}
-                            {% endfor %}
-                        {% endif %}
-                        {% if educations %}
-                            <h3 id="education">Education</h3>
-                            {% for education in educations %}
-                                {% include 'tease-education.twig' with {'post': education} %}
-                            {% endfor %}
-                        {% endif %}
-                        {% if skills %}
-                            <h3 id="skills">Skills</h3>
-                            {% for skill in skills %}
-                                {% include 'tease-skill.twig' with {'post': skill} %}
-                            {% endfor %}
-                        {% endif %}
                     </div>
+                    {% if experiences %}
+                    <div class="background-section">
+                        <h3 class="background-section-title" id="experience">Experience</h3>
+                        {% for experience in experiences %}
+                            {% include 'tease-experience.twig' with {'post': experience} %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if educations %}
+                    <div class="background-section">
+                        <h3 class="background-section-title" id="education">Education</h3>
+                        {% for education in educations %}
+                            {% include 'tease-education.twig' with {'post': education} %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if skills %}
+                    <div class="background-section">
+                        <h3 class="background-section-title" id="skills">Skills</h3>
+                        {% for skill in skills %}
+                            <a class="skill-link" href="{{skill.link}}">{{skill.title}}</a>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                 </div>
                 {% if recommendations %}
-                <div class="recommendations elr-row shadow-box">
+                <div class="posts recommendations shadow-box">
                     <h2 id="recommendations" class="box-heading">Recommendations</h2>
                     {% for recommendation in recommendations %}
                         {% include 'tease-recommendation.twig' with {'post': recommendation} %}
@@ -68,7 +74,7 @@
                 </div>
                 {% endif %}
                 {% if tutorials %}
-                <div class="tutorials elr-row shadow-box">
+                <div class="posts tutorials shadow-box">
                     <h2 id="tutorials" class="box-heading">Tutorials</h2>
                     {% for tutorial in tutorials %}
                         {% include 'tease-tutorial.twig' with {'post': tutorial} %}
