--- a/views/tease-tutorial.twig
+++ b/views/tease-tutorial.twig
@@ -1,28 +1,28 @@
 {% extends "tease.twig" %}
 
 {% block content %}
-    <article class="post elr-col-third">
-        <header class="post-header">
-            <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
-            <ul class="post-box-meta elr-inline-list">
-                <li>
-                    <p><i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a></p>
-                </li>
-                <li>
-                    <p><i class="fa fa-calendar"></i> {{post.date}}</p>
-                </li>
-                <li>
-                    <p><i class="fa fa-folder"></i> <a href="{{post.category.link}}">{{post.category}}</a></p>
-                </li>
-            </ul>
-        </header>
+    <article class="post-box tutorial">
         {% if post.thumbnail.src %}
-        <figure class="post-image-holder">
+        <figure class="post-box-image">
             <a href="{{post.link}}">
                 <img src="{{post.thumbnail.src}}" />
             </a>
         </figure>
         {% endif %}
+        <header class="post-header">
+            <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
+            <ul class="post-box-meta">
+                <li class="post-box-author">
+                    <i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a>
+                </li>
+                <li class="post-box-date">
+                    <i class="fa fa-calendar"></i> {{post.date}}
+                </li>
+                <li class="post-box-category">
+                    <i class="fa fa-folder"></i> <a href="{{post.category.link}}">{{post.category}}</a>
+                </li>
+            </ul>
+        </header>
         <div class="post-content">
             <p class="post-excerpt">{{post.get_preview(25)}}</p>
         </div>
